# MongoPersistence

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
mongopersistence/: __init__.py  dbhelper.py  persistence.py
src/: __init__.py  dbhelper.py  persistence.py
