[tool.poetry]
name = "mongopersistence"
version = "0.3.1"
description = "Package to add persistence to your telegram bot using pymongo"
authors = ["LucaSforza <lucasforza1234@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = ">=20.1"
motor = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["*locales*"]

[tool.ruff.lint]
select = [
    "E", # pyflakes
    "F", # pycodestyle errors
    "W", # pycodestyle warnings
    "UP", # pyupgrade
    "I", # isort
    "C4", # flake8-comprehensions
]
ignore = ["E501"]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F405", "F811"]
"__main__.py" = ["E402", "F401", "F403", "F405", "F811"]
